--- a/app/src/main/res/drawable/ripple_card.xml
+++ b/app/src/main/res/drawable/ripple_card.xml
@@ -10,6 +10,8 @@
                 android:color="#ffffff"
                 />
             <padding
+                android:top="4dp"
+                android:bottom="4dp"
                 android:left="16dp"
                 android:right="16dp"
                 />
