--- a/app/src/main/res/layout/item_list_order.xml
+++ b/app/src/main/res/layout/item_list_order.xml
@@ -2,7 +2,6 @@
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:padding="4dp"
         android:background="@drawable/ripple_card"
         android:clickable="true"
         android:layout_width="wrap_content"
@@ -10,9 +9,8 @@
         <FrameLayout
             android:id="@+id/icon_order"
             android:background="@drawable/circle"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
             android:layout_alignParentStart="true"
+            android:layout_marginTop="12dp"
             android:layout_width="48dp"
             android:layout_height="48dp">
                 <TextView
@@ -28,14 +26,13 @@
         <LinearLayout
             android:id="@+id/info_order_form"
             android:layout_toEndOf="@+id/icon_order"
-            android:layout_toStartOf="@+id/btn_get_order"
             android:orientation="vertical"
-            android:layout_marginStart="12dp"
-            android:layout_width="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/name_order"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textColor="#000000"
                 android:fontFamily="sans-serif-light"
                 android:layout_width="wrap_content"
@@ -44,47 +41,58 @@
             <TextView
                 android:id="@+id/place_receiver"
                 android:fontFamily="sans-serif-light"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1" />
             <TextView
                 android:id="@+id/place_delivery"
                 android:fontFamily="sans-serif-light"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1" />
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:src="@drawable/ic_deposit"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp" />
+                <TextView
+                    android:id="@+id/deposit"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="sans-serif-light"
+                    android:textSize="12sp"
+                    android:textColor="@color/black_text"
+                    android:maxLines="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
                     android:src="@drawable/ic_money"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="18dp"
+                    android:layout_height="18dp" />
                 <TextView
                     android:id="@+id/ship_cost"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="sans-serif-light"
                     android:textSize="12sp"
-                    android:textColor="@color/colorPrimary"
+                    android:layout_gravity="bottom"
+                    android:textColor="@color/black_text"
                     android:maxLines="1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
         </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/btn_get_order"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_btn_get"
-            style = "@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
 
     </RelativeLayout>
