--- a/app/src/main/res/drawable/custom_progress.xml
+++ b/app/src/main/res/drawable/custom_progress.xml
@@ -4,10 +4,10 @@
         <shape>
             <corners android:radius="5dip" />
             <gradient
-                android:startColor="#ff9d9e9d"
-                android:centerColor="#ff5a5d5a"
+                android:startColor="#bdbdbd"
+                android:centerColor="#757575"
                 android:centerY="0.75"
-                android:endColor="#ff747674"
+                android:endColor="#9e9e9e"
                 android:angle="270"
                 />
         </shape>
