--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include
-            layout="@layout/search_form"/>
+            layout="@layout/form_search"/>
         <include
-            layout="@layout/title_form"/>
+            layout="@layout/form_title"/>
         <!--<TextView
             android:id="@+id/title"
             android:background="@color/title_background_color"
