--- a/app/src/main/res/layout/fragment_received_orders.xml
+++ b/app/src/main/res/layout/fragment_received_orders.xml
@@ -3,36 +3,47 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent" 
-    android:layout_height="match_parent"
-  >
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="vertical"
+        android:paddingTop="8dp"
+        android:padding="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:textColor="@color/black_text"
-            android:text="@string/received"
+            android:text="@string/complete"
+            android:fontFamily="sans-serif-light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progress_task"
+            android:layout_marginTop="4dp"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="false"
             android:progressDrawable="@drawable/custom_progress" />
         <TextView
-            android:background="?selectableItemBackground"
+            android:id="@+id/plan"
+            android:background="@drawable/ripple_button"
             android:clickable="true"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#ffffff"
+            android:layout_marginTop="8dp"
             android:text="@string/plan"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="36dp" />
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_receive"
+    <View
+        android:background="@drawable/shadow2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="1dp"/>
+
+    <include layout="@layout/form_list"/>
+
 </LinearLayout>
