--- a/app/src/main/res/layout/fragment_received_orders.xml
+++ b/app/src/main/res/layout/fragment_received_orders.xml
@@ -44,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
-    <include layout="@layout/form_list"/>
+    <include
+        layout="@layout/form_list"/>
 
 </LinearLayout>
