--- a/app/src/main/res/layout/item_list_received.xml
+++ b/app/src/main/res/layout/item_list_received.xml
@@ -25,6 +25,7 @@
     <LinearLayout
         android:id="@+id/info_order_form"
         android:layout_toEndOf="@+id/icon_order"
+        android:layout_toStartOf="@+id/check_completed"
         android:orientation="vertical"
         android:layout_marginStart="16dp"
         android:layout_width="match_parent"
@@ -93,6 +94,17 @@
         </LinearLayout>
 
     </LinearLayout>
+    <CheckBox
+        android:id="@+id/check_completed"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:scaleX="1.3"
+        android:scaleY="1.3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
