--- a/app/src/main/res/layout/fragment_search_on_map.xml
+++ b/app/src/main/res/layout/fragment_search_on_map.xml
@@ -1,10 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <fragment 
-        android:name="com.google.android.gms.maps.SupportMapFragment" 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <fragment
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map"
-        android:layout_width="match_parent" 
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+
+    <TextView
+        android:id="@+id/text_radius"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="6dp"
+        android:layout_above="@+id/seek_bar"
+        android:layout_alignParentStart="true"
+        android:textColor="@color/colorPrimary"
+        android:fontFamily="sans-serif-light"
+        android:background="@drawable/circle_white"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:text="@string/radius"
+        android:layout_width="44dp"
+        android:layout_height="44dp" />
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:background="@drawable/seekbar"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="64dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:max="15"
+        android:progress="5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
