--- a/app/src/main/res/drawable/ripple_button.xml
+++ b/app/src/main/res/drawable/ripple_button.xml
@@ -7,7 +7,7 @@
                 android:radius="4dp"
                 />
             <solid
-                android:color="#9e9e9e"
+                android:color="@color/colorAccent"
                 />
         </shape>
     </item>
