--- a/app/src/main/res/drawable/ripple_normal.xml
+++ b/app/src/main/res/drawable/ripple_normal.xml
@@ -4,7 +4,7 @@
     <item android:id="@android:id/background">
         <shape android:shape="rectangle" >
             <solid
-                android:color="#ffffff"
+                android:color="#f5f5f5"
                 />
             <padding
                 android:top="8dp"
