--- a/app/src/main/res/layout/form_title.xml
+++ b/app/src/main/res/layout/form_title.xml
@@ -2,17 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/title_background_color"
-    android:paddingEnd="16dp"
+    android:paddingEnd="8dp"
     android:paddingStart="16dp"
     android:layout_width="match_parent"
     android:layout_height="48dp">
 
     <TextView
         android:id="@+id/title_text"
-        android:textColor="@color/black_text"
-        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif-medium"
         android:maxLines="1"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -22,10 +22,11 @@
         android:gravity="center"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:textSize="14sp"
+        android:textSize="15sp"
+        android:fontFamily="sans-serif-medium"
         android:textColor="@color/white"
         android:background="@drawable/count_shape"
-        android:layout_width="32dp"
-        android:layout_height="32dp" />
+        android:layout_width="36dp"
+        android:layout_height="36dp" />
 
 </RelativeLayout>
