--- a/app/src/main/res/layout/fragment_received_orders.xml
+++ b/app/src/main/res/layout/fragment_received_orders.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content">
         <TextView
             android:text="@string/complete"
-            android:fontFamily="sans-serif-light"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ProgressBar
@@ -31,10 +32,11 @@
             android:id="@+id/plan"
             android:background="@drawable/ripple_button"
             android:clickable="true"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="sans-serif-medium"
             android:textColor="#ffffff"
             android:layout_marginTop="8dp"
             android:text="@string/plan"
+            android:textSize="16sp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="36dp" />
