--- a/app/src/main/res/layout/item_list_order.xml
+++ b/app/src/main/res/layout/item_list_order.xml
@@ -32,25 +32,28 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/name_order"
-                android:textSize="14sp"
-                android:textColor="#000000"
-                android:fontFamily="sans-serif-light"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1" />
             <TextView
                 android:id="@+id/place_receiver"
+                android:layout_marginTop="4dp"
                 android:fontFamily="sans-serif-light"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="marquee"
                 android:maxLines="1" />
             <TextView
                 android:id="@+id/place_delivery"
                 android:fontFamily="sans-serif-light"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="marquee"
                 android:maxLines="1" />
 
             <LinearLayout
