--- a/app/src/main/res/layout/item_list_received.xml
+++ b/app/src/main/res/layout/item_list_received.xml
@@ -32,25 +32,28 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/name_order"
-            android:textSize="14sp"
-            android:textColor="#000000"
-            android:fontFamily="sans-serif-light"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1" />
         <TextView
             android:id="@+id/place_receiver"
+            android:layout_marginTop="2dp"
             android:fontFamily="sans-serif-light"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="marquee"
             android:maxLines="1" />
         <TextView
             android:id="@+id/place_delivery"
             android:fontFamily="sans-serif-light"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="marquee"
             android:maxLines="1" />
 
         <LinearLayout
@@ -103,7 +106,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-
+        android:id="@+id/status"
+        android:layout_below="@+id/info_order_form"
+        android:text="Chưa nhận hàng"
+        android:textColor="@color/red"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
