--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00897b</color>
-    <color name="colorPrimaryDark">#00695c</color>
-    <color name="colorAccent">#FF009688</color>
+    <color name="colorPrimary">#FF039BE5</color>
+    <color name="colorPrimaryDark">#0277bd</color>
+    <color name="colorAccent">#f242a5f5</color>
 
     <color name="icon_light">@color/colorPrimary</color>
-    <color name="icon_light_inactive">#b0bec5</color>
+    <color name="icon_light_inactive">#82657786</color>
     <color name="tab_background">#ffffff</color>
+
     <color name="divider">@color/grey300</color>
     <color name="btn_save_note">@color/colorPrimary</color>
     <color name="text_normal_color">@color/grey400</color>
@@ -15,14 +16,19 @@
     <color name="btn_get_orders">#b0bec5</color>
     <color name="error_text">#4e5665</color>
     <color name="black_text">#de000000</color>
-    <color name="disable_button">#FF00796B</color>
+    <color name="secondary_text">#6c000000</color>
+    <color name="disable_button">#eb0288d1</color>
     <color name="title_background_color">#ffffff</color>
+    <color name="text_hint_color" >#FF80D8FF</color>
+    <color name="sun_color" >#e53935</color>
 
 
-    <item name="black" type="color">#000000</item>
+
+    <item name="black" type="color">#b4000000</item>
     <item name="grey400" type="color">#bdbdbd</item>
     <item name="white" type="color">#ffffff</item>
     <item name="grey300" type="color">#e0e0e0</item>
+    <item name="grey100" type="color">#f5f5f5</item>
     <item name="grey" type="color">#9e9e9e</item>
     <item name="green300" type="color">#FF81C784</item>
 
@@ -36,7 +42,8 @@
     <item name="pink300" type="color">#f06292</item>
     <item name="green400" type="color">#66bb6a</item>
     <item name="deepPurple400" type="color">#7e57c2</item>
-    <item name="ember400" type="color">#ffd54f</item>
+    <item name="ember400" type="color">#ffca28</item>
+    <item name="deepOrange400" type="color">#ff7043</item>
 
 
     <integer-array name="androidcolors">
@@ -44,6 +51,7 @@
         <item>@color/purple</item>
         <item>@color/teal400</item>
         <item>@color/green300</item>
+        <item>@color/deepOrange400</item>
         <item>@color/brow300</item>
         <item>@color/ember400</item>
         <item>@color/blue300</item>
