--- a/app/src/main/res/layout/form_button_order.xml
+++ b/app/src/main/res/layout/form_button_order.xml
@@ -18,6 +18,7 @@
         android:indeterminate="true"
         app:spb_sections_count="4"
         app:spb_color="#FF0000"
+        app:spb_colors="@array/colors"
         app:spb_speed="2.0"
         app:spb_stroke_width="4dp"
         app:spb_stroke_separator_length="4dp"
