--- a/app/src/main/res/drawable/ic_telephone.xml
+++ b/app/src/main/res/drawable/ic_telephone.xml
@@ -1,10 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="508.0"
-    android:viewportWidth="508.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#324A5E" android:pathData="M254,254m-254,0a254,254 0,1 1,508 0a254,254 0,1 1,-508 0"/>
-    <path android:fillColor="#E6E9EE" android:pathData="M170.1,247.3l33.9,-24.7c11.8,-8.6 13.2,-25.8 2.8,-36.1l-40.1,-40.1c-9.2,-9.2 -24.2,-9.2 -33.3,0c-26.8,26.8 -37.1,52.3 -36,77.4c0.9,20.6 10.5,39.9 25.1,54.5l114.3,114.3c14.6,14.6 33.9,24.2 54.5,25.1c25.1,1.1 50.6,-9.3 77.4,-36c9.2,-9.2 9.2,-24.2 0,-33.3l-40.1,-40.1c-10.3,-10.3 -27.5,-9 -36.1,2.8L267.8,345L170.1,247.3z"/>
-    <path android:fillColor="#CED5E0" android:pathData="M133.5,146.2l-0.2,0.2c-3.2,3.2 -6.1,6.4 -8.9,9.6l72,72l7.5,-5.5c11.8,-8.6 13.2,-25.8 2.8,-36.1l-39.9,-39.9C157.7,137.4 142.7,137 133.5,146.2z"/>
-    <path android:fillColor="#CED5E0" android:pathData="M368.8,381.5l-0.2,0.2c-3.2,3.2 -6.4,6.1 -9.6,8.9l-72,-72l5.5,-7.5c8.6,-11.8 25.8,-13.2 36.1,-2.8l39.9,39.9C377.6,357.3 378,372.3 368.8,381.5z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M367.4,249.3h-19.9c0,-52.8 -43,-95.8 -95.8,-95.8v-19.9C315.5,133.6 367.4,185.5 367.4,249.3z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M410.8,249.3h-19.9c0,-76.7 -62.4,-139.1 -139.1,-139.1V90.3C339.4,90.3 410.8,161.6 410.8,249.3z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M321.4,249.3h-19.9c0,-27.4 -22.3,-49.7 -49.7,-49.7v-19.9C290.1,179.6 321.4,210.9 321.4,249.3z"/>
+<vector android:height="24dp" android:viewportHeight="418.135"
+    android:viewportWidth="418.135" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#7AD06D" android:pathData="M198.9,0.2C88.5,5.5 1.4,97.5 1.7,208c0.1,33.7 8.2,65.5 22.6,93.5L2.2,408.4c-1.2,5.8 4,10.8 9.8,9.5l104.7,-24.8c26.9,13.4 57.1,21.1 89.1,21.6c112.9,1.7 207,-87.9 210.5,-200.7C420.1,93.1 320.3,-5.5 198.9,0.2zM323.9,322.2c-30.7,30.7 -71.4,47.6 -114.8,47.6c-25.4,0 -49.7,-5.7 -72.3,-16.9l-14.6,-7.3l-64.2,15.2l13.5,-65.6l-7.2,-14.1c-11.7,-22.9 -17.6,-47.7 -17.6,-73.7c0,-43.4 16.9,-84.1 47.6,-114.8c30.4,-30.4 71.8,-47.6 114.8,-47.6C252.4,45 293.2,61.9 323.9,92.6c30.7,30.7 47.6,71.4 47.6,114.8C371.4,250.4 354.3,291.8 323.9,322.2z"/>
+    <path android:fillColor="#7AD06D" android:pathData="M309.7,252.4l-40.2,-11.5c-5.3,-1.5 -11,-0 -14.8,3.9l-9.8,10c-4.1,4.2 -10.4,5.6 -15.9,3.4c-19,-7.7 -59,-43.2 -69.2,-61c-2.9,-5.1 -2.5,-11.5 1.2,-16.2l8.6,-11.1c3.4,-4.3 4.1,-10.2 1.8,-15.2l-16.9,-38.2c-4,-9.2 -15.7,-11.8 -23.4,-5.4c-11.2,9.5 -24.5,23.9 -26.1,39.9c-2.9,28.1 9.2,63.6 54.9,106.2c52.7,49.2 95,55.7 122.4,49.1c15.6,-3.8 28.1,-18.9 35.9,-31.3C323.6,266.3 319.3,255.1 309.7,252.4z"/>
 </vector>
