--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -15,6 +15,8 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/avatar"
+            android:src="@drawable/hust"
+            android:scaleType="fitXY"
             android:layout_width="64dp"
             android:layout_height="64dp" />
         <LinearLayout
@@ -33,6 +35,14 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            <RatingBar
+                android:id="@+id/rating"
+                android:theme="@style/RatingBar"
+                android:isIndicator="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="0.1" />
         </LinearLayout>
     </LinearLayout>
 
