--- a/app/src/main/res/drawable/custom_progress.xml
+++ b/app/src/main/res/drawable/custom_progress.xml
@@ -35,8 +35,8 @@
                 <corners
                     android:radius="5dip" />
                 <gradient
-                    android:startColor="#33FF33"
-                    android:endColor="#008000"
+                    android:startColor="#29b6f6"
+                    android:endColor="#039be5"
                     android:angle="270" />
             </shape>
         </clip>
