--- a/app/src/main/res/drawable/ic_check_complete.xml
+++ b/app/src/main/res/drawable/ic_check_complete.xml
@@ -1,5 +1,4 @@
-<vector android:height="24dp" android:viewportHeight="512.001"
-    android:viewportWidth="512.001" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#C2FB3B" android:pathData="M505.2,113.8l-65.8,-65.8c-9.1,-9.1 -23.8,-9.1 -32.9,0L256,198.4l-84.6,84.6l-65.8,-65.8c-4.4,-4.4 -10.3,-6.8 -16.5,-6.8c-6.2,0 -12.1,2.5 -16.5,6.8L6.8,283c-9.1,9.1 -9.1,23.8 0,32.9l148.1,148.1c4.4,4.4 10.3,6.8 16.5,6.8c6.2,0 12.1,-2.5 16.5,-6.8l68.1,-68.1l249.2,-249.2c4.4,-4.4 6.8,-10.3 6.8,-16.5C512,124.1 509.5,118.2 505.2,113.8z"/>
-    <path android:fillColor="#9CDD05" android:pathData="M154.9,464c4.4,4.4 10.3,6.8 16.5,6.8c6.2,0 12.1,-2.5 16.5,-6.8l68.1,-68.1V198.4l-84.6,84.6l-65.8,-65.8c-4.4,-4.4 -10.3,-6.8 -16.5,-6.8c-6.2,0 -12.1,2.5 -16.5,6.8L6.8,283c-9.1,9.1 -9.1,23.8 0,32.9L154.9,464z"/>
+<vector android:height="24dp" android:viewportHeight="46.125"
+    android:viewportWidth="46.124" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF039BE5" android:pathData="M37.73,0.06H8.4C3.76,0.06 0,3.82 0,8.46v29.2c0,4.64 3.76,8.4 8.4,8.4h29.33c4.64,0 8.4,-3.76 8.4,-8.4V8.46C46.13,3.82 42.37,0.06 37.73,0.06zM38.01,19.14L22.14,35.01c-0.67,0.67 -1.59,1.05 -2.54,1.05s-1.87,-0.38 -2.54,-1.05l-7.86,-7.86c-1.4,-1.4 -1.4,-3.67 0,-5.08c0.67,-0.67 1.59,-1.05 2.54,-1.05c0.95,0 1.86,0.38 2.54,1.05l4.69,4.69c0.17,0.17 0.4,0.27 0.64,0.27c0.24,0 0.47,-0.1 0.64,-0.27l12.69,-12.69c0.67,-0.67 1.59,-1.05 2.54,-1.05c0.95,0 1.86,0.38 2.54,1.05C39.41,15.47 39.41,17.74 38.01,19.14z"/>
 </vector>
