--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -39,7 +39,9 @@
                 android:id="@+id/rating"
                 android:theme="@style/RatingBar"
                 android:isIndicator="true"
-                android:layout_width="wrap_content"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:numStars="5"
                 android:stepSize="0.1" />
